public/assets/styles.css
/*========== GOOGLE FONTS ==========*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");

/*========== VARIABLES CSS ==========*/
:root {
  --nav-width: 219px;

  /*========== Colors ==========*/
  --first-color: #008000;
  /* --first-color-light: #F0FFF0; */
  --first-color-light: #F3F4F6;
  --title-color: #4F0A09;
  --text-color: #1F2937;
  --text-color-light: #A5A1AA;
  --body-color: #F0FFF0;
  --container-color: #FFFFFF;

  /*========== Font and typography ==========*/
  --body-font: 'Poppins', sans-serif;
  --normal-font-size: .938rem;
  --small-font-size: .75rem;
  --smaller-font-size: .75rem;

  /*========== Font weight ==========*/
  --font-medium: 500;
  --font-semi-bold: 600;

  /*========== z index ==========*/
  --z-fixed: 100;
}

@media screen and (min-width: 1024px) {
  :root {
    --normal-font-size: 1rem;
    --small-font-size: .875rem;
    --smaller-font-size: .813rem;
  }
}

/*========== BASE ==========*/
*,
::before,
::after {
  box-sizing: border-box;
}

body {
  margin: var(--header-height) 0 0 0;
  /* padding: 1rem 1rem 0; */
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
  color: var(--text-color);
}

h3 {
  margin: 0;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}

/*========== HEADER ==========*/
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: var(--container-color);
  box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
  /* padding: 0 1rem; */
  z-index: var(--z-fixed);
}

.header__container {
  display: flex;
  align-items: center;
  height: var(--header-height);
  justify-content: space-between;
}

.header__img {
  width: 35px;
  height: 35px;
  border-radius: 50%;
}

.header__logo {
  color: var(--title-color);
  font-weight: var(--font-medium);
  display: none;
}

.header__search {
  display: flex;
  padding: .40rem .75rem;
  background-color: var(--first-color-light);
  border-radius: .25rem;
}

.header__input {
  width: 100%;
  border: none;
  outline: none;
  background-color: var(--first-color-light);
}

.header__input::placeholder {
  font-family: var(--body-font);
  color: var(--text-color);
}

.header__icon,
.header__toggle {
  font-size: 1.2rem;
}

.header__toggle {
  color: var(--title-color);
  cursor: pointer;
}

/*========== NAV ==========*/
.nav {
  position: fixed;
  top: 0;
  left: -100%;
  height: 100vh;
  padding: 1rem 1rem 0;
  background-color: var(--container-color);
  box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
  z-index: var(--z-fixed);
  transition: .4s;
}

.nav__container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-bottom: 3rem;
  overflow: auto;
  scrollbar-width: none;
  /* For mozilla */
}

/* For Google Chrome and others */
.nav__container::-webkit-scrollbar {
  display: none;
}

.nav__logo {
  font-weight: var(--font-semi-bold);
  margin-bottom: 2.5rem;
}

.nav__list,
.nav__items {
  display: grid;
}

.nav__list {
  row-gap: 2.5rem;
}

.nav__items {
  row-gap: 1.5rem;
}

.nav__subtitle {
  font-size: var(--normal-font-size);
  text-transform: uppercase;
  letter-spacing: .1rem;
  color: var(--text-color-light);
}

.nav__link {
  display: flex;
  align-items: center;
  color: var(--text-color);
}

.nav__link:hover {
  color: var(--first-color);
}


.nav__icon {
  font-size: 1.2rem;
  margin-right: .5rem;
}

.nav__name {
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
  white-space: nowrap;
  font-weight: bold;
  margin-left: 0.1  rem;
}

.nav__link:hover {
  text-decoration: none;
}

.nav__logout {
  margin-top: 3rem;
}

/* Dropdown */
.nav__dropdown {
  overflow: hidden;
  max-height: 21px;
  transition: 21px 0.4s ease-in;
}

.nav__dropdown-collapse {
  background-color: var(--first-color-light);
  border-radius: .25rem;
  margin-top: 0.5rem;
  margin-left: 1.25rem;
  width: 200px;
  transition: all 1s ease-out;
}

.nav__dropdown-content {
  max-height: 0;
  display: grid;
  row-gap: .5rem;
  padding: .75rem 2.5rem .75rem 1.8rem;
  transition: 1s ease-out;
}

.nav__dropdown-item {
  font-size: var(--smaller-font-size);
  font-weight: 500;
  color: var(--text-color);
  margin-left: -1rem;
}

.nav__dropdown-item:hover {
  color: var(--first-color);
  text-decoration: none;
}

.nav__dropdown-icon {
  margin-left: auto;
  transition: .4s;
}


.nav__dropdown.show {
  max-height: 100rem;
}

.nav__dropdown.show .nav__dropdown-icon {
  max-height: 100rem;
  transform: rotate(180deg);
}

.nav__dropdown.show .nav__dropdown-content {
  max-height: 200px; /* Adjust the value based on your content height */
}

/* Show dropdown collapse */
/* .nav__dropdown:hover {
  max-height: 100rem;
} */

/* Rotate icon arrow */
/* .nav__dropdown:hover .nav__dropdown-icon {
  transform: rotate(180deg);
} */

/*===== Show menu =====*/
.show-menu {
  left: 0;
}

/*===== Active link =====*/
.active {
  color: var(--first-color);
}

/* ========== MEDIA QUERIES ==========*/
/* For small devices reduce search*/
@media screen and (max-width: 320px) {
  .header__search {
    width: 70%;
  }
}

@media screen and (min-width: 768px) {
  /* body {
    padding: 1rem 3rem 0 6rem;
  } */

  .header {
    padding: 0 3rem 0 6rem;
  }

  .header__container {
    height: calc(var(--header-height) + .5rem);
  }

  .header__search {
    width: 300px;
    padding: .55rem .75rem;
  }

  .header__toggle {
    display: none;
  }

  .header__logo {
    display: block;
    font-weight: 600;
  }

  .header__logo:hover {
    text-decoration: none;
    color: var(--first-color);
  }

  .header__img {
    width: 40px;
    height: 40px;
    order: 1;
  }

  .nav {
    left: 0;
    padding: 1.2rem 1.5rem 0;
    width: 68px;
    /* Reduced navbar */
  }

  .nav__items {
    row-gap: 1.7rem;
  }

  .nav__icon {
    font-size: 1.3rem;
    height: 20px;
    width: 20px;
    min-height: 20px;
    min-width: 20px;
    max-height: 20px;
    max-width: 20px;
  }

  /* Element opacity */
  .nav__logo-name,
  .nav__name,
  .nav__subtitle,
  .nav__dropdown-icon {
    opacity: 0;
    transition: .3s;
  }


  /* Navbar expanded */
  .nav:hover {
    width: var(--nav-width);
  }

  /* Visible elements */
  .nav:hover .nav__logo-name {
    opacity: 1;
  }

  .nav:hover .nav__subtitle {
    opacity: 1;
  }

  .nav:hover .nav__name {
    opacity: 1;
  }

  .nav:hover .nav__dropdown-icon {
    opacity: 1;
  }
}

